# sport-club-receptionist

./: .gitignore
.github/workflows/: CD.yml  CI.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_users.py
backend/src/app/: config.py  database.py  main.py
backend/src/app/dependencies/: auth.py
backend/src/app/models/: __init__.py  booking.py  club.py  conversation.py  customer.py  notification.py  user.py
backend/src/app/routes/: auth.py  booking.py  club.py  conversation.py  customer.py  dashboard.py  notification.py  vapi.py
backend/src/app/schemas/: __init__.py  booking.py  club.py  conversation.py  customer.py  notification.py  user.py
backend/src/app/services/: knowledge_base.py  matchi_service.py  notification_service.py  vapi_service.py
backend/src/app/utils/: auth.py
backend/test/: conftest.py  test.yml  test_auth.py  test_booking.py  test_conversation.py  test_customer.py  test_dashboard.py  test_external_services.py  test_integration.py  test_models_club.py  test_notification.py  test_routes_club.py  test_schemas.py  test_services.py  test_utils.py  test_vapi_webhook_handlers.py
